# libpico

./: .gitignore  CMakeLists.txt  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  configure  configure.ac  cppcheck-suppression.txt  doxyfile.in  libpico-1.pc.in
CMakeModules/: FindLibpicobt.cmake
LibPicoCSharp/: LibPicoCSharp.sln
LibPicoCSharp/LibPico/: LibPico.cs  LibPico.csproj
LibPicoCSharp/LibPico/Properties/: AssemblyInfo.cs
LibPicoCSharp/LibPicoTests/: LibPicoTests.csproj  TestChannel.cs  TestPicoBuffer.cs  TestSigmaVerifier.cs  TestUsers.cs
LibPicoCSharp/LibPicoTests/Properties/: AssemblyInfo.cs
app/: app.c  makefile
debian/: changelog  control  copyright  init.d.ex  libpico1-dev.install  libpico1.cron.d.ex  libpico1.default.ex  libpico1.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex  watch.ex
examples/: auth.c  cont.c  pair.c
include/pico/: auth.h  base64.h  beacons.h  buffer.h  cdecode.h  cencode.h  channel.h  channel_bt.h  channel_btout.h  channel_rvp.h  config.h.in  continuous.h  cryptosupport.h  curlsupport.h  debug.h  displayqr.h  dllpublic.h  feedback.h  fsm.h  fsmpico.h  fsmservice.h  json.h  keyagreement.h  keyauth.h  keypair.h  keypairing.h  log.h  messagepicoauth.h  messagepicoreauth.h  messageserviceauth.h  messageservicereauth.h  messagestart.h  messagestatus.h  nonce.h  pico.h  rvpbuffer.h  sequencenumber.h  shared.h  sigmakeyderiv.h  sigmaprover.h  (+2 more)
keypair/: checksig.sh  genkeypair-pem.sh  genkeypair.sh  genpub-pem.sh  gensig.sh  readpub.sh
rpm/: libpico.spec
src/: Makefile.am  Makefile.in  auth.c  base64.c  beacons.c  buffer.c  cdecode.c  cencode.c  channel.c  channel_bt.c  channel_btout.c  channel_rvp.c  continuous.c  cryptosupport.c  curlsupport.c  debug.c  displayqr.c  feedback.c  fsmpico.c  fsmservice.c  json.c  keyagreement.c  keyauth.c  keypair.c  keypairing.c  log.c  main.dox  messagepicoauth.c  messagepicoreauth.c  messageserviceauth.c  messageservicereauth.c  messagestart.c  messagestatus.c  nonce.c  rvpbuffer.c  sequencenumber.c  shared.c  sigmakeyderiv.c  sigmaprover.c  sigmaverifier.c  (+1 more)
template/: stub.c  stub.h
tests/: Makefile.am  Makefile.in  test_auth.c  test_base64.c  test_beacons.c  test_buffer.c  test_channel.c  test_continuous.c  test_cryptosupport.c  test_displayqr.c  test_fsm.c  test_json.c  test_messages.c  test_sigmaverifier.c  test_users.c  valgrind.suppressions
tests/mockbt/: mockbt.c  mockbt.h
